--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ urllib3 = "==1.24.2"
 wrapt = "==1.11.1"
 yarl = "==1.3.0"
 PyYAML = "==5.1"
+factom-api = "*"
 
 [requires]
 python_version = "3.7"
